--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+<style>
+    html, body {
+        margin: 0;
+        padding: 0;
+    }
+</style>
 <body>
-    <img src='img/placeholder' style='width: 100%'/>
+    <img src='img/placeholder.png' style='width: 100%'/>
 </body>
 </html>
