--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </style>
 <body>
     <img src='img/placeholder.png' style='width: 100%'/>
+
+    <script src='/static/dist/js'></script>
 </body>
 </html>
