More structural setup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!DOCTYPE HTML>
 <html>
-<style>
-    html, body {
-        margin: 0;
-        padding: 0;
-    }
-</style>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel='stylesheet' href='/static/dist/css/main.css'>
+</head>
+
 <body>
-    <img src='img/placeholder.png' style='width: 100%'/>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <div class='test'>Bla</div>
+    <img src='img/placeholder.png' style='opacity:0.1; width: 100%'/>
 
     <script src='/static/dist/js'></script>
 </body>
